--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Hello API",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "authbind --deep node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
