--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Simple Hello API",
   "main": "src/index.js",
   "scripts": {
-    "start": "authbind --deep node src/index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2"
   }
-} 
+}
